--- a/products.html
+++ b/products.html
@@ -12,15 +12,15 @@
   <link rel="stylesheet" href="./assets/style.css">
     <title>Book Store</title>
 </head>
-<body class="bg-light">
-    <section id="home">
-        <div class="cont">
+<body class="back">
+    <section id="products">
+        <div class="container">
             <nav class="navbar navbar-expand-lg bg-light fixed-top">
                 <div class="container-fluid">
                   <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                   </button>
-                  <a class="navbar-brand" href="./index.html">TheBookHouse</a>
+                  <a class="navbar-brand" href="#">TheBookHouse</a>
                   <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                       <li class="nav-item">
@@ -39,12 +39,14 @@
                     </form>
                   </div>
                 </div>
-              </nav>
-              <div class="landing">
-                <h1 class="display-3">TheBookHouse</h1>
-                <p>Books open your mind, broaden your mind, and strengthen you as nothing else can.</p>
-                <button class="button"><a class="none" href="./products.html"> Explore Our Books</a></button>
+              </nav>         
+        <div class="container mt-5">
+            <h2 class="display-4 text-center mt-5">Our Products</h2>
+            <hr>
+            <div class="row products justify-content-evenly mt-4">
             </div>
+        </div>
+        <hr>
         </div>
     </section>
     <footer class="bg-light text-center text-white">
@@ -52,6 +54,7 @@
         <div class="container p-4 pb-0">
           <!-- Section: Social media -->
           <section class="mb-4">
+
             <!-- Twitter -->
             <a class="btn btn-outline-dark btn-floating m-1" href="https://twitter.com/NkabiInam28" role="button"
               ><i class="fab fa-twitter"></i
