--- a/about.html
+++ b/about.html
@@ -67,11 +67,11 @@
         </nav>
         <div class="container mt-5">
           <hr />
-          <h2 class="display-4 text-center">About Us</h2>
+          <h2 class="display-4 text-center overflow-y-hidden">About Us</h2>
           <hr />
           <div class="row">
             <div class="col-lg-6 col-md-6 col-12">
-              <h6 class="display-6 text-center">Dear readers,</h6>
+              <h6 class="display-6 text-center overflow-y-hidden">Dear readers,</h6>
               <p class="text-center fs-5">
                 TheBookHouse is one of the newest bookstores in Cape Town, it
                 was established few years ago back in 2020 during COVID-19
@@ -86,7 +86,7 @@
             </div>
             <div class="col-lg-6 col-md-6 col-12 mb-5">
               <div class="head">
-                <h6 class="display-6 text-center">Let's Get In Touch</h6>
+                <h6 class="display-6 text-center overflow-y-hidden">Let's Get In Touch</h6>
               </div>
               <form action="https://formspree.io/f/xrgvvvbk" method="POST">
                 <div class="form-floating mb-3">
