--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 </div>
               </nav>
               <div class="landing">
-                <h1 class="display-3">TheBookHouse</h1>
+                <h1 class="display-3 overflow-y-hidden">TheBookHouse</h1>
                 <p>Books open your mind, broaden your mind, and strengthen you as nothing else can.</p>
                 <button class="button"><a class="none" href="./products.html"> Explore Our Books</a></button>
             </div>
