--- a/products.html
+++ b/products.html
@@ -41,7 +41,7 @@
                 </div>
               </nav>         
         <div class="container mt-5">
-            <h2 class="display-4 text-center mt-5">Our Products</h2>
+            <h2 class="display-4 text-center mt-5 overflow-y-hidden">Our Products</h2>
             <hr>
             <div class="row products justify-content-evenly mt-4">
             </div>
